--- a/index.html
+++ b/index.html
@@ -19,15 +19,50 @@
   --borda: #0f3460;
 }
 
+/* ===== MODO CLARO ===== */
+body.light-mode {
+  --bg-escuro: #f0f2f5;
+  --bg-card: #ffffff;
+  --texto-primario: #333333;
+  --texto-secundario: #666666;
+  --texto-cinza: #999999;
+  --borda: #dddddd;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
   padding: 20px;
   background: var(--bg-escuro);
   color: var(--texto-primario);
   min-height: 100vh;
+  transition: background 0.3s ease, color 0.3s ease;
 }
 
 .container { max-width: 600px; margin: 0 auto; }
+
+/* ===== BOTÃO MODO NOTURNO/CLARO ===== */
+.theme-toggle {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 15px;
+}
+.theme-btn {
+  background: transparent;
+  border: 2px solid var(--vinho);
+  color: var(--vinho);
+  padding: 8px 16px;
+  border-radius: 30px;
+  cursor: pointer;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  transition: all 0.3s;
+}
+.theme-btn:hover {
+  background: var(--vinho);
+  color: white;
+}
 
 h1 { 
   text-align: center; 
@@ -562,6 +597,13 @@ textarea {
 </head>
 <body>
 <div class="container">
+  <!-- BOTÃO MODO NOTURNO/CLARO -->
+  <div class="theme-toggle">
+    <button class="theme-btn" onclick="toggleTheme()">
+      <span>🌓</span> <span id="themeText">Modo Escuro</span>
+    </button>
+  </div>
+
   <h1>⚓ AIMME Launcher</h1>
   <p class="subtitle">v2.0 • Sistema Completo • 11 Prompts</p>
   
@@ -928,6 +970,17 @@ function showTab(tabName) {
     document.querySelectorAll('.tab-content').forEach(c => c.classList.remove('active'));
     document.querySelector(`.tab[onclick="showTab('${tabName}')"]`).classList.add('active');
     document.getElementById(tabName).classList.add('active');
+}
+
+// Função de Tema
+function toggleTheme() {
+    document.body.classList.toggle('light-mode');
+    const themeText = document.getElementById('themeText');
+    if (document.body.classList.contains('light-mode')) {
+        themeText.textContent = 'Modo Claro';
+    } else {
+        themeText.textContent = 'Modo Escuro';
+    }
 }
 
 // Inicialização
