--- a/index.html
+++ b/index.html
@@ -867,8 +867,8 @@ textarea {
   <div id="status" class="status"></div>
   
   <div class="footer">
-    AIMME System • Pedro Nunes (UMAX - 8º semestre)<br>
-    v2.0 • 11 Prompts • Criado por revolta contra leitura passiva
+    AIMME System • Pedro Nunes<br>
+    v2.0 • 11 Prompts • AI-Assisted Microlearning for Medical Education
   </div>
 </div>
 
