--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@ textarea {
   </div>
 
   <h1>⚓ AIMME Launcher</h1>
-  <p class="subtitle">v2.0 • Sistema Completo • 11 Prompts</p>
+  <p class="subtitle">v2.0 • Sistema Completo • AI-Assisted Microlearning for Medical Education</p>
   
   <!-- BANNER DE INSTRUÇÃO CORRIGIDO -->
   <div class="instruction-banner">
@@ -681,7 +681,7 @@ textarea {
           <span class="flow-step-title">MÚLTIPLA ESCOLHA</span>
         </div>
         <div class="flow-step-content">
-          📌 NOVO chat + Bloco<br>
+          📌 NOVO chat + Bloco+ material<br>
           📌 + AIMME MC + ▶️ INICIAR
         </div>
       </div>
@@ -692,13 +692,13 @@ textarea {
           <span class="flow-step-title">DISSERTATIVO</span>
         </div>
         <div class="flow-step-content">
-          📌 NOVO chat + Bloco<br>
+          📌 NOVO chat + Bloco+ material<br>
           📌 + AIMME DISS + ▶️ INICIAR
         </div>
       </div>
     </div>
-    <div class="flow-dica">💡 Chat Mestre uma vez por matéria. Blocos reutilizáveis.</div>
-    <div class="flow-exemplo">📋 EXEMPLO: PDF → ▶️ INICIAR → EXPORTAR BLOCO 2 → NOVO chat + Bloco 2 + prompt MC → ▶️ INICIAR</div>
+    <div class="flow-dica">💡 Chat Mestre uma vez por matéria. Blocos reutilizáveis.(Sempre use os materiais pertinentes a cada bloco como reforço)</div>
+    <div class="flow-exemplo">📋 EXEMPLO: PDF → ▶️ INICIAR → EXPORTAR BLOCO 2 → NOVO chat + Bloco 2 + material + prompt MC → ▶️ INICIAR</div>
   </div>
 
   <!-- ABAS -->
